app/assets/stylesheets/white_theme/playlists.scss
// carousel
a.next, a.prev {
  display: block;
  width: 42px;
  height: 42px;
  background-color: transparent;
  text-indent: -9999px;
  &:hover img {
    background-color: $body_link_hover;
  }
  &.disabled {
    opacity: 0.1;
    &:hover img {
      background-color: transparent;
    }
  }
}

.playlists_row{
  text-align: center;
  font-size: 11px;
  margin-bottom: 28px;
  height:168px;

  li {
    float:left;
    position:relative;
    display:block;
    width:178px;
    a.overlay{
      margin-left: 20px;
      opacity:1;
    }
    img{
      margin-top:4px;
      margin-left: -1px;
      width:125px;
      height: 125px;
    }
  }

  .playlists_home_title {
    margin-top: 7px;
    margin-bottom: 0px;
      a {
        font-size: 13px;

      }
   }
  .playlists_home_user  a {
    font-size: 12px;
    color: #000;
  }
}

#playlists_carousel {
  position: relative;
  .prev {
    position: absolute;
    left: 0;
    top: 45px;
    background-image: image-url('icons/prev.png');
  }
  .next {
    position: absolute;
    right: 0;
    top: 45px;
    background-image: image-url('icons/next.png');
  }
}

.playlists_carousel {
  height: 190px;
  width: 800px;
  overflow: hidden;
  margin: 0 70px;
}

li.small_playlists {
  position: relative;
  float: left;
  width: 146px;
  height: 172px;
  margin-right: 50px;
  margin-bottom: 100px;
  a.small_playlist_title {
    text-align: center;
    font-family: $header_font;
    font-size: 13px;
    color: $black;
    position: absolute;
    top: 140px;
    left: 0px;
    width: 146px;
  }
}

.mini_cover {
  position: absolute;
  left: 10px;
  width: 59px;
  height: 54px;
}

a.jewel_case_125 {
  position: absolute;
  left: 0;
  top: 0;
  background-color: transparent;
  text-indent: -9999px;
  width: 146px;
  height: 136px;
}

img.cover_125 {
  width: 125px;
  height: 125px;
  margin-left: 6px;
  margin-top: 4px;
}

a.jewel_case_200 {
  position: absolute;
  width: 200;
  height: 200;
  left: 15px;
  top: 10px;
  display: block;
}

img.cover_200 {
  margin-left: 23px;
  margin-top: 7px;
}

.playlist {
  div.box {

    background-color: $light_gray;
    padding-left: 25px;
    padding-top: 9px;
    margin-bottom: 1px;
    h2 {
      font-weight: normal;
      font-size: 20px;
      line-height: 20px;
      padding-right: 40px;
      color: $text_color;
      margin: 0;
      margin-bottom: 4px;
    }
    h3 {
      font-weight: normal;
      font-size: 12px;
      margin: 0;
      padding-bottom: 8px;
      color: $text_color;
    }
  }
  div.info {
    position: relative;
    display: block;
    background-color: $playlist_box_silver;
    padding: 15px 15px 15px 20px;

    div.cover {
      position: relative;
      float: left;
      width: 148px;
      height: 136px;
      overflow: hidden;
    }
    p.description {
      // float: left;
      font-size: 12px;
      width: 360px;
      margin-left: 20px;
    }
    .play_time {
      font-weight: bold;
    }
  }
  .empty {
    position: relative;
    color: $text_color2;
    background-color: $orange_background;
    padding: 10px 20px 10px 20px;
    margin-bottom: 1px;
    a {
      color: $text_color2;
      text-decoration: underline;
      font-weight: bold;
    }
  }
}

// editing, woo hoo!

#edit_playlist {
  .playlist {
    .tracks {
      position: relative;
    }
    #drop_here {
      display: none;
    }
    .playlist_title {
      a.edit {
        display: none;
      }
    }
    &.adding {
      #drop_here {
        display: block;
        width: 100%;
        height: 50px;
        line-height: 50px;
        border-top: 1px solid #000;
        background-color: $playlist_box_silver;
        text-align: center;
        color: $orange;
        font-size: 20px;
      }
    }
  }
}

#playlist_sources {
  .playlist_source {
    .asset, .track {
      width: 420px;
    }
    padding: 0px 0 0 0;
    width: 420px;
  }
}

#sort_playlists {
  width: 100%;
  position: relative;
  height: 1000px;
  li.small_playlists {
    margin-bottom: 20px;
  }
}

#edit_playlist {
  position: relative;
}

#edit_playlist_info {
  // height: 370px;
  form p {
    font-size: 14px;
  }
  input {
    font-size: 13px;
  }
  textarea {
    width: 369px;
  }
}

.playlist_delete_button {
    background: image-url('icons/delete.png') no-repeat center top;
    display: block;
    height: 30px;
    width: 110px;
    font-size: 10px;
    margin-top: 20px!important;
    margin-left: 10px;
    font-weight: normal;
    line-height: 35px;
    float: right;
    position: relative;
    top: 10px;
    margin-right: -25px;
}

.playlist_edit_button {
  margin: 0!important;
  float: right!important;
  margin-right: 20px!important;
}

.edit_playlist_button_row {
    // background-color: $playlist_box_silver;
    overflow: hidden;
    position: absolute;
    right: 20px;
    bottom: 20px;
}


.playlists_hidden_blurb {
  margin: 5px 0 14px 0;
  font-size: 12px;
}

#edit_playlist .unopenable .title {
  width: 317px!important;
}

